30 Nov 2005 mipsator
 * fixed missing include for intmax_t in compat, noticed by veins.
 * added few more advanced tags in pmk.
 * added alternate pmkfile name support in pmkscan script.
 * added support for inclusion of third party file content into pmkscan
   generated makefile.
 * added some recursive target stuff to prepare multiple generation.

24 Nov 2005 mipsator
 * fixed extra define in pmkscan generated config file.
 * fixed lower in gen_tag().
 * started to add advanced tags.

22 Nov 2005 mipsator
 * improved distclean target in generated makefile.

19 Nov 2005 mipsator
 * fixed pmkfile, pmkcfg.sh and compat.
 * polished a bit func.c.

17 Nov 2005 mipsator
 * added basic distclean target in generated makefile and started to
   prepare for advanced tags support.

10 Nov 2005 mipsator
 * added use of new tags functions in pmk.

# snapshot 0.9.3-s4

05 Nov 2005 mipsator
 * finished basic tag support in pmkscan for config file generation.
 * added pmksyntax.5 manual page to give a common overview of PMK basic
   syntax used in pmkfile and scanfile.

04 Nov 2005 mipsator
 * fixed a small bug in c language parser.
 * added a start of config file template generation in pmkscan.

27 Oct 2005 mipsator
 * added support for extra tags in pmkscan.

27 Oct 2005 mipsator
 * started improvements to pmkscan (see TODO).

25 Oct 2005 mipsator
 * added support for sub headers, language label and language option in
   pmkscan.

24 Oct 2005 mipsator
 * fixed a bug when generating a pmkfile that has no checks, noticed by
   veins of skreel.org.
 * set './scanfile' as default specification file for pmkscan when no
   option is given at the command line.

# snapshot 0.9.3-s3

23 Oct 2005 mipsator
 * misc changes before new snapshot.

19 Oct 2005 mipsator
 * improved/fixed the pmkfile generation in pmkscan.

13 Oct 2005 mipsator
 * polished checks in func.
 * added scanfile.5 man page.

10 Oct 2005 mipsator
 * rewritten check_header() and check_type() to guarantee the recording